--- a/index.html
+++ b/index.html
@@ -4,7 +4,246 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!---->
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <!---->
+    <header class="header">
+      <!---->
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <!---->
+      <a class="header__logo" href="#">
+        <img src="./images/logo-black.svg" alt="Логотип - оно тебе надо" />
+      </a>
+      <!---->
+      <address class="header__address">
+        <a class="header__address-number" href="tel:+9 999 555 5555"
+          >+9 999 555 5555</a
+        >
+        <a class="header__address-mail" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
+        <p class="header__address-text">
+          наб. Принсенграхт 263-<br />265, Амстердам
+        </p>
+      </address>
+    </header>
+    <!---->
+    <main class="content">
+      <section class="cover">
+        <!---->
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text letter-spacing-extended">
+            ОН<span class="no-letter-spacing">О</span>
+          </span>
+          <span class="aligned-text_center letter-spacing-extended">
+            ТЕБ<span class="no-letter-spacing">Е</span>
+          </span>
+          <span class="aligned-text_right letter-spacing-extended">
+            НАД<span class="no-letter-spacing">О</span>
+          </span>
+        </h1>
+        <!---->
+        <div class="cover__description">
+          <p class="cover__description-text no-letter-spacing">
+            Аукцион вещей,
+            <span class="description-letter-spacing">в</span>которые никто не
+            верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <!---->
+      <section class="lots no-letter-spacing">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <!--1 li-->
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#top">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр&thinsp;—&thinsp;Пол
+                  Томас Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <!--2 li-->
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#top">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <!--3 li-->
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#top">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это&thinsp;—&thinsp;одна из революционных работ
+                  Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+          <!-- add 4 card
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#top">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+         -->
+        </ul>
+        <!---->
+        <a class="lots__look-more-link" href="#top">посмотреть больше</a>
+      </section>
+      <!---->
+      <section class="about no-letter-spacing">
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Логотип - оно тебе надо"
+            />
+          </div>
+          <article class="about__content">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text">
+              <p class="about__text-indent">
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на&nbsp;критику, кажущуюся простоту или сложность, сейчас без
+                этих лотов невозможно представить современную культуру. Когда в
+                эти вещи не верил никто, продолжали верить их создатели. И
+                сейчас эти лоты стали культовыми.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!---->
+    </main>
+    <!---->
+    <footer class="footer">
+      <address class="footer__address">
+        <a class="footer__address-number" href="tel:+9 999 555 5555"
+          >+9 999 555 5555</a
+        >
+        <a class="footer__address-mail" href="mailto:info@sobaka.ge"
+          >info@sobaka.ge</a
+        >
+        <p class="footer__address-text">наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <!---->
+      <nav class="footer__menu">
+        <ul class="footer__menu-list aligned-text_center">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active" href="#top"
+              >главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#top">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#top">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <!---->
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="https://www.youtube.com">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Логотип компании YouTube"
+            />
+          </a>
+        </li>
+        <!---->
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="https://vk.com">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Логотип компании VK"
+            />
+          </a>
+        </li>
+        <!---->
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="https://pinterest.com">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Логотип компании Pinterest"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+    <!---->
+  </body>
 </html>
