--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!---->
-    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
@@ -33,7 +33,7 @@
       </a>
       <!---->
       <address class="header__address">
-        <a class="header__address-number" href="tel:+9 999 555 5555"
+        <a class="header__address-number" href="tel:+99995555555"
           >+9 999 555 5555</a
         >
         <a class="header__address-mail" href="mailto:info@sobaka.ge"
@@ -45,7 +45,7 @@
       </address>
     </header>
     <!---->
-    <main class="content">
+    <main>
       <section class="cover">
         <!---->
         <div class="overlay"></div>
@@ -187,9 +187,9 @@
     <!---->
     <footer class="footer">
       <address class="footer__address">
-        <a class="footer__address-number" href="tel:+9 999 555 5555"
-          >+9 999 555 5555</a
-        >
+        <a class="footer__address-number" href="tel:+99995555555"
+          >+9 999 555 5555
+        </a>
         <a class="footer__address-mail" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
