--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
         <img src="./images/logo-black.svg" alt="Логотип - оно тебе надо" />
       </a>
       <!---->
-      <address class="header__address">
-        <a class="header__address-number" href="tel:+99995555555"
+      <address class="header__address address__style">
+        <a class="address__text-decoration" href="tel:+99995555555"
           >+9 999 555 5555</a
         >
-        <a class="header__address-mail" href="mailto:info@sobaka.ge"
+        <a class="address__text-decoration" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
-        <p class="header__address-text">
-          наб. Принсенграхт 263-<br />265, Амстердам
-        </p>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
     <!---->
@@ -51,23 +49,21 @@
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text letter-spacing-extended">
-            ОН<span class="no-letter-spacing">О</span>
+            он<span class="no-letter-spacing">о</span>
           </span>
           <span class="aligned-text_center letter-spacing-extended">
-            ТЕБ<span class="no-letter-spacing">Е</span>
+            теб<span class="no-letter-spacing">е</span>
           </span>
           <span class="aligned-text_right letter-spacing-extended">
-            НАД<span class="no-letter-spacing">О</span>
+            над<span class="no-letter-spacing">о</span>
           </span>
         </h1>
         <!---->
         <div class="cover__description">
-          <p class="cover__description-text no-letter-spacing">
-            Аукцион вещей,
-            <span class="description-letter-spacing">в</span>которые никто не
-            верил
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <!---->
@@ -127,24 +123,6 @@
               </article>
             </a>
           </li>
-          <!-- add 4 card
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#top">
-              <article class="card card_type_picture">
-                <div class="overlay"></div>
-                <h3 class="card__title">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков... Сколько бы вы на такое поставили, если бы не знали,
-                  что это — одна из революционных работ Кандинского?
-                </p>
-              </article>
-            </a>
-          </li>
-         -->
         </ul>
         <!---->
         <a class="lots__look-more-link" href="#top">посмотреть больше</a>
@@ -162,10 +140,10 @@
           <article class="about__content">
             <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
-              <p class="about__text-indent">
+              <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно
-                дорогого антиквариата. Наши лоты вообще не должны были попасть
-                ни на один аукцион. Потому что кому нужен дневник
+                дорогого антиквариата. Наши лоты вообще не должны были
+                попасть ни на один аукцион. Потому что кому нужен дневник
                 девочки-подростка или картина, которую может нарисовать даже
                 ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
@@ -186,14 +164,14 @@
     </main>
     <!---->
     <footer class="footer">
-      <address class="footer__address">
-        <a class="footer__address-number" href="tel:+99995555555"
+      <address class="footer__address address__style">
+        <a class="address__text-decoration" href="tel:+99995555555"
           >+9 999 555 5555
         </a>
-        <a class="footer__address-mail" href="mailto:info@sobaka.ge"
+        <a class="address__text-decoration" href="mailto:info@sobaka.ge"
           >info@sobaka.ge</a
         >
-        <p class="footer__address-text">наб. Принсенграхт 263-265, Амстердам</p>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <!---->
       <nav class="footer__menu">
@@ -214,7 +192,11 @@
       <ul class="footer__social-list">
         <!---->
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="https://www.youtube.com">
+          <a
+            class="footer__social-link"
+            target="_blank"
+            href="https://www.youtube.com"
+          >
             <img
               class="footer__social-icon"
               src="./images/yt.svg"
@@ -224,7 +206,7 @@
         </li>
         <!---->
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="https://vk.com">
+          <a class="footer__social-link" target="_blank" href="https://vk.com">
             <img
               class="footer__social-icon"
               src="./images/vk.svg"
@@ -234,7 +216,11 @@
         </li>
         <!---->
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="https://pinterest.com">
+          <a
+            class="footer__social-link"
+            target="_blank"
+            href="https://pinterest.com"
+          >
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
