--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <div class="about__text">
               <p>
                 Здесь вы не встретите очередное пафосное собрание невероятно
-                дорогого антиквариата. Наши лоты вообще не должны были
-                попасть ни на один аукцион. Потому что кому нужен дневник
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
                 девочки-подростка или картина, которую может нарисовать даже
                 ребёнок? Кому нужны все эти странные вещи, созданные любителями?
               </p>
